--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,7 +264,15 @@ td {
     border-bottom: 1px solid #a8a1a1;
 }
 
+.botonsaludo{
+    background: #167f0e; padding: 4px; margin: 3px auto;
+    border-radius: 5px;
+    color: #fff;
+    text-decoration: none;
+    position: fixed;
+    top: 10px;
 
+}
 
 /*CODIGO RESPONSIVE*/
 @media screen and (max-width: 732px) {
